src/objects/MBA_Staging_Subscription__c.object
<CustomObject>
    <description>Used for the integration between MBA and Salesforce. Fields are to be read only for all users and object is only visible to admins.</description>
    <fields>
        <fullName>AdGroup__c</fullName>
        <description>Marketing : This is the ad group for the Google AdWords ad that this user clicked on to create a trial store</description>
        <inlineHelpText>Marketing : This is the ad group for the Google AdWords ad that this user clicked on to create a trial store</inlineHelpText>
        <label>Ad Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdKeywords__c</fullName>
        <inlineHelpText>Marketing :</inlineHelpText>
        <label>Ad Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <inlineHelpText>Affiliate Partner that brought Bigcommerce the store</inlineHelpText>
        <label>Affiliate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <inlineHelpText>SBD source for this store</inlineHelpText>
        <label>Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAmount__c</fullName>
        <label>Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingCycle__c</fullName>
        <label>Billing Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biennially</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CancellationDate__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CancellationRequestCode__c</fullName>
        <label>Cancellation Request Code</label>
        <picklist>
            <picklistValues>
                <fullName>Consolidating Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted Store Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misled by Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Took it Seriously</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No/Low Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No/Low Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Too Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused to Disclose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresolved Bugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory Customer Service Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brick &amp; Mortar Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Have Enough Products for the Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t need API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t need Google Trusted Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t need loyalty marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t need omni channel sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t need the storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrading to new plans for unlimited products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Stores</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CancellationRequestDate__c</fullName>
        <label>Cancellation Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <inlineHelpText>Marketing :</inlineHelpText>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Churn_Date__c</fullName>
        <label>Churn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Churn_Type__c</fullName>
        <label>Churn Type</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Marketing : from trail signup question &quot;Where are you based?&quot;</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>----------</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua &amp; Deps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CouponCode__c</fullName>
        <inlineHelpText>Marketing : promotion given to a prospect to encourage them to sign up for a free trial</inlineHelpText>
        <label>Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataUsage__c</fullName>
        <label>Data Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayAd__c</fullName>
        <description>Marketing : This is the name of the display ad that this user clicked on to create a trial</description>
        <inlineHelpText>Marketing : the name of the display ad that this user clicked on to create a trial</inlineHelpText>
        <label>Display Ad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <description>Allows you to open the record in edit view in a new tab straight from the report page!</description>
        <formula>HYPERLINK(&apos;/&apos;&amp;Id&amp;&apos;/e&apos;,&apos;edit&apos;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Allows you to open the record in edit view in a new tab straight from the report page!</inlineHelpText>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <picklist>
            <picklistValues>
                <fullName>New to eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced with eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switching from a Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Web Designer/Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m creating a store for a client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m setting up a store for a client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set up a new online business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch from a different ecommerce platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add an online store to my brick-and-mortar business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyal Bigcommerce client adding another store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set up a store for a client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m doing research as a student, app developer or job applicant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experiment__c</fullName>
        <inlineHelpText>Marketing :</inlineHelpText>
        <label>Experiment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GrowthAdjustmentFee__c</fullName>
        <label>Growth Adjustment Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <inlineHelpText>Marketing : selection client made when asked &quot;What will you sell?&quot; when starting the trial</inlineHelpText>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals &amp; Pets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques and Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel &amp; Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art &amp; Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive &amp; Motorcross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking &amp; Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer &amp; Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gifts &amp; Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewelry &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsTrial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LandingPage__c</fullName>
        <inlineHelpText>Marketing : page the client submitted the trial form from</inlineHelpText>
        <label>Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAAccountID__c</fullName>
        <externalId>true</externalId>
        <label>MBA Account ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAPartnerID__c</fullName>
        <label>MBA Partner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBASubscriptionID__c</fullName>
        <externalId>true</externalId>
        <label>MBA Subscription ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MarketingCampaign__c</fullName>
        <description>Marketing : This is the name of the campaign that was used to send this lead. For example, the campaign could be a campaign in Google AdWords, an email campaign, or any other marketing campaign</description>
        <label>Marketing Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketingSource__c</fullName>
        <label>Marketing Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Request_Date__c</fullName>
        <description>Date when Migration needs to be performed.</description>
        <label>Migration Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MonthlyRecurringRevenue__c</fullName>
        <label>Monthly Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderCap__c</fullName>
        <label>Order Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderIncrement__c</fullName>
        <label>Order Increment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentStatus__c</fullName>
        <label>Payment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricingTestGroup__c</fullName>
        <description>Which pricing page the client is cookied to based on when they started their trial / purchased their store</description>
        <label>Pricing Test Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <description>ID specific to the plan name since plans can have different ID iterations yet maintain the same name in MBA</description>
        <label>Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <inlineHelpText>Marketing : promotion given to a prospect to encourage them to upgrade from a free trial to a paid store</inlineHelpText>
        <label>Promotion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProvisionedDate__c</fullName>
        <label>Provisioned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PurchaseDate__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_ID__c</fullName>
        <description>SBD</description>
        <label>Referral ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Migration_At__c</fullName>
        <label>Requested Migration At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requested_Migration__c</fullName>
        <label>Requested Migration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBD_Domain_Name__c</fullName>
        <label>SBD Domain Name</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SBD_Store_ID__c</fullName>
        <label>SBD Store ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchTerms__c</fullName>
        <inlineHelpText>Marketing :</inlineHelpText>
        <label>Search Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <inlineHelpText>Marketing :</inlineHelpText>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server__c</fullName>
        <label>Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of record</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>MBA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BMP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staging_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Real store data overridden from MBA staging environment</inlineHelpText>
        <label>Staging Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted in MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StoreURL__c</fullName>
        <label>Store URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SubscriptionType__c</fullName>
        <label>Subscription Type</label>
        <picklist>
            <picklistValues>
                <fullName>Store</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSL Certificate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TemporaryStoreURL__c</fullName>
        <label>Temporary Store URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TrailingGMVCount__c</fullName>
        <description>contains the trailing 12 month GMV for the store</description>
        <label>Trailing GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrailingOrderCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Store&apos;s order count</description>
        <label>Trailing Order Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrialExtended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trial Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TrialFormPage__c</fullName>
        <label>Trial Form Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <label>Unique ID</label>
        <type>Text</type>
    </fields>
    <label>MBA Staging Subscription</label>
    <listViews>
        <fullName>Billing_to_Review</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>PurchaseDate__c</columns>
        <columns>StartDate__c</columns>
        <columns>StoreURL__c</columns>
        <columns>Experiment__c</columns>
        <columns>Product__c</columns>
        <columns>MBAAccountID__c</columns>
        <columns>MBASubscriptionID__c</columns>
        <columns>MonthlyRecurringRevenue__c</columns>
        <columns>Unique_ID__c</columns>
        <columns>BillingCycle__c</columns>
        <columns>SubscriptionType__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PurchaseDate__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>notContain</operation>
            <value>ssl,domain,geotrust</value>
        </filters>
        <filters>
            <field>MonthlyRecurringRevenue__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Experiment__c</field>
            <operation>contains</operation>
            <value>billing</value>
        </filters>
        <label>Billing to Review</label>
    </listViews>
    <listViews>
        <fullName>Maria_Purchase_Date_is_Blank</fullName>
        <columns>NAME</columns>
        <columns>MBAAccountID__c</columns>
        <columns>MBASubscriptionID__c</columns>
        <columns>StartDate__c</columns>
        <columns>Edit__c</columns>
        <columns>Product__c</columns>
        <columns>MonthlyRecurringRevenue__c</columns>
        <columns>Unique_ID__c</columns>
        <columns>BillingCycle__c</columns>
        <columns>SubscriptionType__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PurchaseDate__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Store</value>
        </filters>
        <filters>
            <field>BillingCycle__c</field>
            <operation>notEqual</operation>
            <value>Free</value>
        </filters>
        <filters>
            <field>StartDate__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>IsTrial__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Update: Purchase Date is Blank</label>
    </listViews>
    <listViews>
        <fullName>Maria_Start_Date_is_Blank</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Product__c</columns>
        <columns>MBASubscriptionID__c</columns>
        <columns>PurchaseDate__c</columns>
        <columns>StartDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>CancellationDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SubscriptionType__c</columns>
        <columns>MonthlyRecurringRevenue__c</columns>
        <columns>BillingCycle__c</columns>
        <columns>StoreURL__c</columns>
        <columns>Unique_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StartDate__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>notContain</operation>
            <value>domain,ssl</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Update: Start Date is Blank</label>
    </listViews>
    <listViews>
        <fullName>Start_Date_is_Blank</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Product__c</columns>
        <columns>MBASubscriptionID__c</columns>
        <columns>PurchaseDate__c</columns>
        <columns>StartDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>CancellationDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SubscriptionType__c</columns>
        <columns>MonthlyRecurringRevenue__c</columns>
        <columns>BillingCycle__c</columns>
        <columns>StoreURL__c</columns>
        <columns>Unique_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StartDate__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>notContain</operation>
            <value>domain,ssl</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Start Date is Blank</label>
    </listViews>
    <nameField>
        <displayFormat>MSS-{0000}</displayFormat>
        <label>MBA Staging Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBA Staging Subscriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>